@@ -268,6 +268,13 @@ and <b>abort</b> execution and transaction and fail task.</p>
     warning.  <em>Since Ant 1.8.0</em></td>
   <td align="center" valign="top">No</td>
 </tr>
+<tr>
+  <td valign="top">rowcountproperty</td>
+  <td valign="top">The name of a property to set to the number of rows
+    updated by the first statement/transaction that actually returned
+    a row count.  <em>Since Ant 1.8.0</em></td>
+  <td align="center" valign="top">No</td>
+</tr>
 </table>
 
 <h3>Parameters specified as nested elements</h3>
